removed the contact form

--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
           <i class="fab fa-html5"></i>
         </section>
         <section class="skill-icons">
+          <i class="fab fa-node-js"></i>
           <i class="fab fa-bootstrap"></i>
         </section>
-        
+
         <span>and also...</span>
         <ul id="other-skills">
           <li>Cooking</li>
@@ -111,20 +112,8 @@
               >wolfgangm.dev@gmail.com</a
             >
           </p>
-          
         </section>
-        <section>
-          <!-- <form name="contact" method="POST" data-netlify="true" class="flex-col-c">
-            <input type="text" name="name" placeholder="Your Name" />
-            <input type="email" name="email" placeholder="Your Email" />
-            <textarea
-              name="message"
-              placeholder="Your Message"
-              rows="6"
-            ></textarea>
-            <button type="submit">Send</button>
-          </form> -->
-        </section>
+        <section></section>
       </section>
       <footer class="flex-col-c">
         <section class="links">
