added favicon and changed layout. also changed some minor styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./img/favicon_io/favicon-32x32.png">
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -21,7 +22,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Document</title>
+    <title>Wolfgang McRae</title>
   </head>
   <body>
     <main>
@@ -29,8 +30,8 @@
         <nav>
           <ul>
             <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
             <li><a href="#skills">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
@@ -67,17 +68,6 @@
           our dog.
         </p>
       </section>
-
-      <section id="projects" class="flex-col-c">
-        <h2>Recent Projects:</h2>
-        <section id="project-grid">
-          <section class="project-box"></section>
-          <section class="project-box"></section>
-          <section class="project-box"></section>
-          <section class="project-box"></section>
-        </section>
-      </section>
-
       <section id="skills" class="flex-col-c">
         <h2>Stuff I'm Good At:</h2>
         <section class="skill-icons">
@@ -91,14 +81,18 @@
           <i class="fab fa-bootstrap"></i>
         </section>
 
-        <span>and also...</span>
-        <ul id="other-skills">
-          <li>Cooking</li>
-          <li>Riding kangaroos (with their permission)</li>
-          <li>Petting dogs</li>
-          <li>Swimming</li>
-        </ul>
       </section>
+      <section id="projects" class="flex-col-c">
+        <h2>Recent Projects:</h2>
+        <section id="project-grid">
+          <section class="project-box"></section>
+          <section class="project-box"></section>
+          <section class="project-box"></section>
+          <section class="project-box"></section>
+        </section>
+      </section>
+
+      
       <section id="contact" class="flex-col-c">
         <section class="flex-col-c">
           <h2>Get in touch:</h2>
