changed basic styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./img/favicon_io/favicon.ico">
+    <link rel="icon" href="./img/favicon_io/favicon.ico" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -80,19 +80,19 @@
           <i class="fab fa-node-js"></i>
           <i class="fab fa-bootstrap"></i>
         </section>
-
       </section>
       <section id="projects" class="flex-col-c">
         <h2>Recent Projects:</h2>
         <section id="project-grid">
-          <section class="project-box"></section>
-          <section class="project-box"></section>
-          <section class="project-box"></section>
-          <section class="project-box"></section>
+          <section class="project-box">
+            <h2>Coming Soon!</h2>
+          </section>
+          <section class="project-box">
+            <h2>Coming Soon!</h2>
+          </section>
         </section>
       </section>
 
-      
       <section id="contact" class="flex-col-c">
         <section class="flex-col-c">
           <h2>Get in touch:</h2>
