Added projects and changed styling

--- a/index.html
+++ b/index.html
@@ -75,19 +75,63 @@
           <i class="fab fa-css3-alt"></i>
           <i class="fab fa-js-square"></i>
           <i class="fab fa-html5"></i>
-        
           <i class="fab fa-node-js"></i>
           <i class="fab fa-bootstrap"></i>
         </section>
       </section>
       <section id="projects" class="flex-col-c">
-        <h2>Recent Projects:</h2>
+        <h3>Recent Projects:</h3>
         <section id="project-grid">
           <section class="project-box">
-            <h2>Coming Soon!</h2>
+            <div class="project-image" id="mush"></div>
+            <div class="project-info">
+              <h3>Mush</h3>
+              <a href="https://www.mushclt.com/" target="_blank"
+                ><p>mushclt.com</p></a
+              >
+              <p>An info page for a mushroom cultivator.</p>
+              <p>Technologies used:</p>
+              <ul class="skill-icons">
+                <li><i class="fab fa-html5"></i></li>
+                <li><i class="fab fa-css3-alt"></i></li>
+                <li><i class="fab fa-js-square"></i></li>
+              </ul>
+            </div>
           </section>
           <section class="project-box">
-            <h2>Coming Soon!</h2>
+            <div class="project-image" id="giorgia"></div>
+            <div class="project-info">
+              <h3>Giorgia McRae</h3>
+              <a href="https://www.giorgiamcrae.com" target="_blank"
+                ><p>giorgiamcrae.com</p></a
+              >
+              <p>A portfolio page for an emerging artist.</p>
+              <p>Technologies used:</p>
+              <ul class="skill-icons">
+                <li><i class="fab fa-html5"></i></li>
+                <li><i class="fab fa-css3-alt"></i></li>
+                <li><i class="fab fa-js-square"></i></li>
+              </ul>
+            </div>
+          </section>
+          <section class="project-box">
+            <div class="project-image" id="penguin"></div>
+            <div class="project-info">
+              <h2>Penguin Planner</h2>
+              <a href="https://penguinplanner.netlify.app/" target="_blank"
+                ><p>penguinplanner.com</p></a
+              >
+              <p>A simple scheduling app.</p>
+              <p>Technologies used:</p>
+              <ul class="skill-icons">
+                <li><i class="fab fa-react"></i></i></li>
+                <li><i class="fab fa-node-js"></i></li>
+                <li><i class="fab fa-css3-alt"></i></li>
+              </ul>
+            </div>
+          </section>
+          <section class="project-box">
+            
           </section>
         </section>
       </section>
