added work in progress

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               <a href="https://penguinplanner.netlify.app/" target="_blank"
                 ><p>penguinplanner.com</p></a
               >
-              <p>A simple scheduling app.</p>
+              <p>A simple scheduling app (work in progress).</p>
               <p>Technologies used:</p>
               <ul class="skill-icons">
                 <li><i class="fab fa-react"></i></i></li>
